package ports

import (
	"context"
	"time"

	mvmv1 "github.com/weaveworks/flintlock/api/services/microvm/v1alpha1"
	"github.com/weaveworks/flintlock/core/models"
)

// MicroVMService is the port definition for a microvm service.
type MicroVMService interface {
	// Capabilities returns a list of the capabilities the provider supports.
	Capabilities() models.Capabilities

	// CreateVM will create a new microvm.
	Create(ctx context.Context, vm *models.MicroVM) error
	// DeleteVM will delete a VM and its runtime state.
	Delete(ctx context.Context, id string) error
	// StartVM will start a created microvm.
	Start(ctx context.Context, vm *models.MicroVM) error
	// PauseVM will pause a started microvm.
	Pause(ctx context.Context, id string) error
	// ResumeVM will resume a paused microvm.
	Resume(ctx context.Context, id string) error
	// StopVM will stop a paused or running microvm.
	Stop(ctx context.Context, id string) error
	// State returns the state of a microvm.
	State(ctx context.Context, id string) (MicroVMState, error)
}

// This state represents the state of the Firecracker MVM process itself
// The state for the entire Flintlock MVM is represented in models.MicroVMState.
type MicroVMState string

const (
	MicroVMStateUnknown    MicroVMState = "unknown"
	MicroVMStatePending    MicroVMState = "pending"
	MicroVMStateConfigured MicroVMState = "configured"
	MicroVMStateRunning    MicroVMState = "running"
	MicroVMStatePaused     MicroVMState = "paused"
)

// MicroVMGRPCService is a port for a microvm grpc service.
type MicroVMGRPCService interface {
	mvmv1.MicroVMServer
}

// IDService is a port for a service for working with identifiers.
type IDService interface {
	// GenerateRandom will create a random identifier.
	GenerateRandom() (string, error)
}

// EventService is a port for a service that acts as a event bus.
type EventService interface {
	// Publish will publish an event to a specific topic.
	Publish(ctx context.Context, topic string, eventToPublish interface{}) error
	// SubscribeTopic will subscribe to events on a named topic..
	SubscribeTopic(ctx context.Context, topic string) (ch <-chan *EventEnvelope, errs <-chan error)
	// SubscribeTopics will subscribe to events on a set of named topics.
	SubscribeTopics(ctx context.Context, topics []string) (ch <-chan *EventEnvelope, errs <-chan error)
	// Subscribe will subscribe to events on all topics
	Subscribe(ctx context.Context) (ch <-chan *EventEnvelope, errs <-chan error)
}

type EventEnvelope struct {
	Timestamp time.Time
	Namespace string
	Topic     string
	Event     interface{}
}

// ImageService is a port for a service that interacts with OCI images.
type ImageService interface {
	// Pull will get (i.e. pull) the image for a specific owner.
	Pull(ctx context.Context, input *ImageSpec) error
	// PullAndMount will get (i.e. pull) the image for a specific owner and then
	// make it available via a mount point.
	PullAndMount(ctx context.Context, input *ImageMountSpec) ([]models.Mount, error)
	// Exists checks if the image already exists on the machine.
	Exists(ctx context.Context, input *ImageSpec) (bool, error)
	// IsMounted checks if the image is pulled and mounted.
	IsMounted(ctx context.Context, input *ImageMountSpec) (bool, error)
}

type ImageSpec struct {
	// ImageName is the name of the image to get.
	ImageName string
	// Owner is the name of the owner of the image.
	Owner string
}

// ImageMountSpec is the declaration of an image that needs to be pulled and mounted.
type ImageMountSpec struct {
	// ImageName is the name of the image to get.
	ImageName string
	// Owner is the name of the owner of the image.
	Owner string
	// Use is an indicator of what the image will be used for.
	Use models.ImageUse
	// OwnerUsageID is an identifier from the owner.
	OwnerUsageID string
}

// NetworkService is a port for a service that interacts with the network
// stack on the host machine.
type NetworkService interface {
	// IfaceCreate will create the network interface.
	IfaceCreate(ctx context.Context, input IfaceCreateInput) (*IfaceDetails, error)
	// IfaceDelete is used to delete a network interface
	IfaceDelete(ctx context.Context, input DeleteIfaceInput) error
	// IfaceExists will check if an interface with the given name exists
	IfaceExists(ctx context.Context, name string) (bool, error)
	// IfaceDetails will get the details of the supplied network interface.
	IfaceDetails(ctx context.Context, name string) (*IfaceDetails, error)
}

type IfaceCreateInput struct {
	// DeviceName is the name of the network interface to create on the host.
	DeviceName string
	// Type is the type of network interface to create.
	Type models.IfaceType
	// MAC allows the specifying of a specific MAC address to use for the interface. If
	// not supplied a autogenerated MAC address will be used.
	MAC string
}

type IfaceDetails struct {
	// DeviceName is the name of the network interface created on the host.
	DeviceName string
	// Type is the type of network interface created.
	Type models.IfaceType
	// MAC is the MAC address of the created interface.
	MAC string
	// Index is the network interface index on the host.
	Index int
}

type DeleteIfaceInput struct {
	// DeviceName is the name of the network interface to delete from the host.
	DeviceName string
}
